--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 token=MTAxMjg5OTgwMDU4NjQwNzk3Ng.G6Y4yr.UfQWr3TaqnC5zjHTnwOyclR8hTuY-0f2HGpiSc
 prefixDefaul=a!
-MongoURL=mongodb+srv://nmp:oEc6pMWYwwQVzRdu@nmp.ywkesvv.mongodb.net/?retryWrites=true&w=majority
+MongoURL=
 ColoEmbed=WHITE
 intents=130815
